Fix failed scores not showing properly (#98)
* include completed 1 as failed

* fix status check

---------

--- a/web/static/css/pages/profile.css
+++ b/web/static/css/pages/profile.css
@@ -535,6 +535,10 @@
   background: hsl(0, 15%, 15%);
 }
 
+.complete-1 {
+  background: hsl(0, 15%, 15%);
+}
+
 .beatmap-link {
   color: #fff;
 }
